# Photos-v2

./: .gitignore  package.json  pnpm-lock.yaml  vite.config.ts
Server_Test/: Cargo.toml  output.md
Server_Test/src/: main.rs
src/: App.css  App.tsx  BottomBar.css  BottomBar.tsx  Config.tsx  Viewer.tsx  index.tsx
src-tauri/: Cargo.toml  build_error.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: file_helpers.rs  lib.rs  main.rs  media.rs  server.rs  server.txt
src/components/: BackgroundBlur.tsx  Gallery.tsx  ImageDisplay.tsx  MuteIndicator.css  MuteIndicator.tsx  NavButtons.tsx  PositionIndicator.tsx  Rating.tsx
src/components/topbar/: CenterBar.tsx  LeftBar.tsx  RightBar.tsx  TopBar.css  TopBar.tsx
src/components/video/: BackgroundVideoBlur.tsx  ProgressBar.tsx  VideoDisplay.tsx  VideoPlayer.css
src/generics/: TranslucentPanel.tsx  ZoomPanel.tsx
src/hooks/: useAnimation.ts  useAutoHideCursor.ts  useConfiguration.ts  useGallery.ts  useKeydown.ts  useMouseListener.ts
src/types/: media.tsx
src/util/: arrayUtil.ts  fileUtil.ts  imageUtil.tsx  pathUtil.ts  ratingUtil.ts
