[package]
name = "photos-v2"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "photos_v2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"

tauri-plugin-sql = { version = "2", features = ["sqlite"] }
base64 = "0.22"
window-vibrancy = "0.4"
tiny_http = "0.12"
urlencoding = "2"
rusqlite = { version = "0.31", features = ["bundled"] }

axum = "0.8"
axum-extra = { version = "0.10.2", features = ["async-read-body", "typed-header"] }
tokio = { version = "1", features = ["full", "fs", "macros", "rt-multi-thread", "io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
axum-range = "0.5" 
mime_guess = "2.0"
warp = "0.3"
percent-encoding = "2.1"
futures = "0.3"
dashmap = "6.1.0"
tracing = "0.1.41"
walkdir = "2"
opener = { version = "0.8.3", features = ["reveal"] }
notify = "6"
image = "0.25.9"
windows = { version = "0.62.2", features = ["Foundation_Collections", "Win32_Foundation", "Win32_Graphics_Gdi", "Win32_Storage_StructuredStorage", "Win32_System_Com", "Win32_System_LibraryLoader", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
